--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="resources/css/app.css"/>
     <title>Learning Ext JS 4</title>
 </head>
-<body></body>
+<body style="color:red;"></body>
 </html>
 <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.io/ext-4.1.0-gpl/ext-all-debug.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
